--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -325,7 +325,7 @@
         opacity: 1;
       }
       /* Dark theme */
-      @media (prefers-color-scheme: light) {
+      @media (prefers-color-scheme: dark) {
         html {
           color: rgb(230,230,230);
           background-color: rgb(40,40,40);
@@ -526,7 +526,7 @@
         <img src="/images/tutorial.png">
         <p>Then click the extension to approve the login.</p>
       </div>
-      <p>Click <a href="https://github.com/FreshSupaSulley/Duochrome/blob/main/README.md#no-logins-found" target="_blank">here</a> for troubleshooting.</p>
+      <p>Learn more <a href="https://github.com/FreshSupaSulley/Duochrome/blob/main/README.md#no-logins-found" target="_blank">here</a>.</p>
       <button type="submit" id="failureButton">Got it</button>
     </div>
 
