--- a/firefox/popup.html
+++ b/firefox/popup.html
@@ -20,12 +20,12 @@
         user-select: none;
         width: 40%;
         transition: 0.15s ease-in-out;
-      }
-      button:hover {
-        cursor: pointer;
-        background-color: rgba(30,215,30,0.5);
-        border-color: rgb(30,215,30);
-        color: white;
+        &:hover {
+          cursor: pointer;
+          background-color: rgba(30,215,30,0.5);
+          border-color: rgb(30,215,30);
+          color: white;
+        }
       }
       button:active {
         background-color: rgba(173,219,173,0.5);
@@ -46,7 +46,7 @@
         text-align: center;
         font-weight: normal;
         padding: 2px 20px;
-        font-size: 13px;
+        font-size: 13px; /* FIREFOX H4 NERF */
       }
       p {
         font-size: 15px;
@@ -59,8 +59,7 @@
         width: 90%;
         margin-left: auto;
         margin-right: auto;
-        border: 3px solid rgb(240,240,240);
-        border-radius: 5px;
+        border-radius: 3px;
         margin-bottom: 10px;
         user-select: none;
       }
@@ -84,9 +83,9 @@
       }
       a {
         color: inherit;
-      }
-      a:hover {
-        color: gray;
+        &:hover {
+          color: gray;
+        }
       }
 
       /* Classes */
@@ -103,7 +102,7 @@
         display: none;
         padding: 5px;
         border-radius: 5px;
-        background-color: rgb(250,250,250);
+        background-color: #fafafa;
         margin: 10px;
         padding-left: 20px;
         padding-right: 20px;
@@ -126,7 +125,7 @@
         scale 1s ease-in-out 0.1s both;
         position: absolute;
         top: 6px;
-        left: 66%;
+        right: 3.3em;
       }
       /* Circle outline */
       .checkmarkCircle {
@@ -162,6 +161,7 @@
         text-align: center;
         width: 100%;
         font-size: 18px;
+        border-radius: 10px;
       }
       #counter {
         padding: 0;
@@ -183,23 +183,23 @@
         transition: transform .25s ease-out;
         border: none;
         color: inherit;
-      }
-      #helpButton:hover {
-        cursor: pointer;
-        transform: scale(1.15);
-        transition: transform .25s ease-out;
+        &:hover {
+          cursor: pointer;
+          transform: scale(1.15);
+          transition: transform .25s ease-out;
+        }
       }
       #gear {
         pointer-events: bounding-box;
+        &:hover {
+          cursor: pointer;
+        }
       }
       #gear, #gearChange {
         position: absolute;
         right: 7px;
         transform-origin: center;
         transition: transform .25s ease-out;
-      }
-      #gear:hover {
-        cursor: pointer;
       }
       /* Only the inner gear should change size */
       #gear:hover #gearChange {
@@ -217,6 +217,14 @@
         margin: 12px 0;
       }
       /* Settings */
+      #settings {
+        margin-top: 5px;
+        border-radius: 12px;
+        overflow: hidden;
+        & td {
+          background-color: #f3f3f3;
+        }
+      }
       #importButton, #exportButton {
         padding: 6px 12px;
         width: 84%;
@@ -226,10 +234,10 @@
         padding: 6px 12px;
         width: auto;
         border-radius: 5px;
-      }
-      #resetButton:hover {
-        background-color: red;
-        border-color: rgb(255,100,100);
+        &:hover {
+          background-color: red;
+          border-color: rgb(255,100,100);
+        }
       }
       #resetButton:active {
         background-color: rgb(255,100,100);
@@ -269,7 +277,7 @@
         border-radius: 10px;
       }
       #clickLogin {
-        background-color:red;
+        background-color: red;
       }
       @keyframes scale {
         0%, 100% {transform: none} 50% {transform: scale3d(1.1, 1.1, 1)};
@@ -280,6 +288,36 @@
       @keyframes stroke {
         100% {stroke-dashoffset: 0}
       }
+      /* Universal / Traditional toggle */
+      /* Hacky solution while we wait for Firefox to actually do work and add :has */
+      .instructions-class {
+        width: 100%;
+        display: none;
+        &:checked + .instructions-label {
+          font-weight: bolder;
+          background-color: #555;
+          color: white;
+        }
+      }
+      .instructions-label {
+        padding: 10px;
+        background-color: #f5f5f5;
+        cursor: pointer;
+        transition: all 0.2s ease;
+        border-radius: 10px;
+        &:hover {
+          color: gray;
+        }
+      }
+      .hidden-panel {
+        display: none;
+      }
+      #universal-button:checked ~ .slide .traditional-panel,
+      #traditional-button:checked ~ .slide .universal-panel {
+        display: block;
+        opacity: 1;
+      }
+      /* Dark theme */
       @media (prefers-color-scheme: dark) {
         html {
           color: rgb(230,230,230);
@@ -289,15 +327,18 @@
           color: white;
           background-color: #555;
           border-color: #a6a6a6;
-        }
-        button:hover {
-          background-color: #8a8a8a;
-          border-color: #ff6161;
+          &:hover {
+            background-color: #8a8a8a;
+            border-color: #ff6161;
+          }
         }
         button:disabled {
           color: #AAA;
           background-color: #505050;
           border-color: #a6a6a6;
+        }
+        a:hover {
+          color: #bbb;
         }
         .slide {
           color: white;
@@ -312,6 +353,27 @@
           border: 1px dashed;
           border-radius: 10px;
         }
+        #settings {
+          margin-top: 5px;
+          border-radius: 12px;
+          overflow: hidden;
+          & td {
+            background-color: #333;
+          }
+        }
+        .instructions-label {
+          background-color: #333;
+          &:hover {
+            color: gray;
+          }
+        }
+        .instructions-class {
+          &:checked + .instructions-label {
+            background-color: #eee;
+            color: black;
+          }
+        }
+      }
     </style>
   </head>
   <body>
@@ -329,55 +391,86 @@
     <!-- Welcome screen -->
     <div class="screen" id="intro">
       <h2>Connect to Duo</h2>
-      <h4>Let's activate Duochrome as your new Duo device.</h4>
+      <h4>Login to your Duo Mobile devices website, then click <b>Ok</b>.</h4>
       <button type="submit" id="introButton">Ok</button>
     </div>
 
     <!-- Activation screen -->
     <div class="screen" id="activation">
-      <h4 id="errorSplash">Use arrows to flip through instructions:</h4>
+      <h4 id="errorSplash">Switch between Universal or Traditional prompt instructions, depending on your website.</h4>
 
-      <!-- Table to distribute buttons evenly -->
-      <table>
-        <tr>
-          <td><button id="prev">&#10094;</button></td>
-          <td style="width: 50%"><p id="counter"></p></td>
-          <td><button id="next">&#10095;</button></td>
-        </tr>
-      </table>
-
-      <div class="steps">
+      <div class="steps" style="margin-top: 20px">
+        <!-- Universal / Traditional buttons -->
+        <!-- We are waiting for Mozilla to get their shit together and release :has as a feature -->
+        <!-- <form class="instructions"> -->
+          <input type="radio" name="traditional-input" id="universal-button" class="instructions-class" value="universal" checked>
+          <label for="universal-button" class="instructions-label">Universal</label>
+          <input type="radio" name="traditional-input" id="traditional-button" class="instructions-class" value="traditional">
+          <label for="traditional-button" class="instructions-label">Traditional</label>
+        <!-- </form> -->
+        <!-- Table to distribute buttons evenly -->
+        <table style="border-spacing: 0; margin-top: 20px">
+          <tr>
+            <td><button id="prev">&#10094;</button></td>
+            <td style="width: 50%"><p id="counter"></p></td>
+            <td><button id="next">&#10095;</button></td>
+          </tr>
+        </table>
+        <!-- Slide 1 -->
         <div class="slide">
-          <p style="margin-bottom: 10px">Find your organization's Duo Mobile website.</p>
-          <h5 style="margin-top: 0px; font-weight: normal">(<a href="https://osu.login.duosecurity.com/devices?link_clicked=true/" target="_blank">link for OSU students</a>)</h5>
-          <img src="/images/image0.png">
-          <p>Click <b>Add a new device</b>.</p>
+          <p style="margin-bottom: 10px">Click <b>Add a new device</b>.</p>
+          <!-- Universal -->
+          <div class="hidden-panel traditional-panel">
+            <img src="/images/universal/0.png">
+          </div>
+          <!-- Traditional -->
+          <div class="hidden-panel universal-panel">
+            <img src="/images/traditional/0.png">
+          </div>
         </div>
+        <!-- Slide 2 -->
         <div class="slide">
-          <p>Click <b>Duo Mobile</b>.</p>
-          <img src="/images/image1.png">
+          <div class="hidden-panel traditional-panel">
+            <p>Click <b>Duo Mobile</b>.</p>
+            <img src="/images/universal/1.png">
+          </div>
+          <div class="hidden-panel universal-panel">
+            <p>Click <b>Tablet</b>, then <b>iOS</b>.</p>
+            <img src="/images/traditional/1.png">
+          </div>
         </div>
+        <!-- Slide 3 -->
         <div class="slide">
-          <p>Click <b>I have a tablet</b>.</p>
-          <img src="/images/image2.png">
+          <div class="hidden-panel traditional-panel">
+            <p>Click <b>I have a tablet</b>, then <b>Next</b>.</p>
+            <img src="/images/universal/2.png">
+          </div>
+          <div class="hidden-panel universal-panel">
+            <p>Click <b>I have Duo Mobile installed</b>.</p>
+            <img src="/images/traditional/2.png">
+          </div>
         </div>
-        <div class="slide">
-          <p>Click <b>Next</b>.</p>
-          <img src="/images/image3.png">
-        </div>
+        <!-- Slide 4 -->
         <div class="slide">
           <p id="qrSearchText">Searching for a QR code...</p>
           <p id="qrErrorText"></p>
           <h5 style="font-weight: normal">Duochrome will find the QR code on the current tab.</h5>
-          <img src="/images/image4.png">
+          <h5 style="">Not working? Go to Step 6.</h5>
         </div>
+        <!-- Slide 5 -->
         <div class="slide">
-          <p>If you can't find the QR code, send the code to your email.</p>
-          <img src="/images/image5.png">
+          <p>Alternatively, you can send the code to your email.</p>
+          <div class="hidden-panel traditional-panel">
+            <img src="/images/universal/4.png">
+          </div>
+          <div class="hidden-panel universal-panel">
+            <img src="/images/traditional/4.png">
+          </div>
         </div>
+        <!-- Slide 6 -->
         <div class="slide">
           <p>Open the link in the email, and copy the code into the box below. Click activate.</p>
-          <img src="/images/image6.png">
+          <img src="/images/6.png">
           <table>
             <tr>
               <td>
@@ -427,7 +520,7 @@
         <img src="/images/tutorial.png">
         <p>Then click the extension to approve the login.</p>
       </div>
-      <p>Click <a href="https://github.com/FreshSupaSulley/Duochrome/blob/main/README.md#no-logins-found" target="_blank">here</a> for troubleshooting.</p>
+      <p>Learn more <a href="https://github.com/FreshSupaSulley/Duochrome/blob/main/README.md#no-logins-found" target="_blank">here</a>.</p>
       <button type="submit" id="failureButton">Got it</button>
     </div>
 
@@ -475,7 +568,7 @@
         <tr>
           <td>
             <button type="submit" id="exportButton">Export</button>
-            <input style="cursor: not-allowed; width: 80%; margin-top: 4px;" placeholder="Click export" id="exportText" readonly>
+            <input style="width: 80%; margin-top: 4px;" placeholder="Click export" id="exportText" readonly>
           </td>
           <td>
             <h4 style="margin-top: 35px; margin-bottom: 35px">Export login data.</h4>
