super epic intermediary cisco trademark infrigement complaint push

--- a/chrome/welcome.html
+++ b/chrome/welcome.html
@@ -60,18 +60,18 @@
     </style>
   </head>
   <body>
-    <!-- DuOSU logo -->
-    <img id="logo" src="images/Duochrome.svg" class="expand" width="200">
-    <h1 id="splash">Welcome to <b>Duochrome</b>.</h1>
+    <!-- Logo -->
+    <img id="logo" src="images/Auto 2FA.svg" class="expand" width="200">
+    <h1 id="splash">Welcome to <b>Auto 2FA</b>.</h1>
 
     <div id="tutorialDiv">
-      <source src="images/tutorial.mov" type="video/mp4" />
-      <video id="tutorial" autoplay loop muted width="100">
+      <!-- <source src="images/tutorial.mov" type="video/mp4" /> -->
+      <!-- <video id="tutorial" autoplay loop muted width="100">
         <source src="images/tutorial.mov" type="video/mp4">
         Your browser does not support the video tag.
-      </video>
-      <h3>Navigate to your organization's Duo Mobile device manager page, then open Duochrome for activation instructions.</h3>
-      <p style="margin-bottom: 50px">Visit the <a href="https://github.com/FreshSupaSulley/Duochrome/blob/main/TUTORIAL.md">website</a> for more detailed steps.</p>
+      </video> -->
+      <h3>Open Auto 2FA for activation instructions. You'll need to find your organization's Duo Mobile device manager page.</h3>
+      <p style="margin-bottom: 50px">Visit the <a href="https://github.com/FreshSupaSulley/Auto-2FA/blob/main/TUTORIAL.md">website</a> for more detailed steps.</p>
     </div>
   </body>
   <script src="welcome.js"></script>
