--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -499,7 +499,7 @@
           </table>
         </div>
       </div>
-      <h4 style="margin: 0; padding: 0; font-size: 10px;">Confused? Checkout the <a href="https://github.com/FreshSupaSulley/Auto-2FA/blob/main/TUTORIAL.md" target="_blank">walkthrough</a>.</h4>
+      <h4 style="margin: 0; padding: 0; font-size: 10px;">Confused? Use the <a href="https://github.com/FreshSupaSulley/Auto-2FA/blob/main/TUTORIAL.md" target="_blank">walkthrough</a>.</h4>
     </div>
 
     <!-- Activation success page -->
